--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <p>Thailand is a Southeast Asian country. It's known for tropical beaches, opulent royal palaces, ancient ruins and ornate temples displaying figures of Buddha. In Bangkok, the capital, an ultramodern cityscape rises next to quiet canalside communities and the iconic temples of Wat Arun, Wat Pho and the Emerald Buddha Temple (Wat Phra Kaew). Nearby beach resorts include bustling Pattaya and fashionable Hua Hin.</p>
             </div>
         </center>
+
         <div class="page-header" id="movies">
             <h2 class="text-capitalize">movies you must watch</h2>
         </div>
@@ -78,23 +79,94 @@
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 
                 <img class="img-resposive img-thumbnail" src="https://lumiere-a.akamaihd.net/v1/images/p_disneyplus_rayaandthelastdragon_20842_36be8eca.jpeg">
-
-                <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                    <h4 class="
+            </div>
+            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
+                <h4 class="
                                text-capitalize">Action-Adventure-Fantasy Movie
-                        <span style="color: gold" class="glyphicon glyphicon-star"></span>
-                        <span style="color: gold" class="glyphicon glyphicon-star"></span>
-                        <span style="color: gold" class="glyphicon glyphicon-star"></span>
-                        <span style="color: gold" class="glyphicon glyphicon-star"></span>
-                        <span style="color: gold" class="glyphicon glyphicon-star"></span>
-                    </h4>
+                    <span style="color: gold" class="glyphicon glyphicon-star"></span>
+                    <span style="color: gold" class="glyphicon glyphicon-star"></span>
+                    <span style="color: gold" class="glyphicon glyphicon-star"></span>
+                    <span style="color: gold" class="glyphicon glyphicon-star"></span>
+                    <span style="color: gold" class="glyphicon glyphicon-star"></span>
+                </h4>
 
-                    <h3>
-                        Long ago, in the fantasy world of Kumandra, humans and dragons lived together in harmony. However, when sinister monsters known as the Druun threatened the land, the dragons sacrificed themselves to save humanity. Now, 500 years later, those same monsters have returned, and it's up to a lone warrior to track down the last dragon and stop the Druun for good.
-                    </h3>
+                <h3>
+                    Long ago, in the fantasy world of Kumandra, humans and dragons lived together in harmony. However, when sinister monsters known as the Druun threatened the land, the dragons sacrificed themselves to save humanity. Now, 500 years later, those same monsters have returned, and it's up to a lone warrior to track down the last dragon and stop the Druun for good.
+                </h3>
+            </div>
+        </div>
+        <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12 page-header" id="books">
+            <h2 class="text-capitalize">books you must read</h2>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6" data-toggle="modal" data-target="#The_Enchanted_Bellows_And_Other_Stories">
+            <img class="img-responsive" src="https://rukminim1.flixcart.com/image/416/416/ki96c280-0/book/9/m/1/the-enchanted-bellows-original-imafy34m52ddakb2.jpeg?q=70">
+            <hr>
+            <p class="text-primary">The Enchanted Bellows And Other Stories</p>
+        </div>
+        <div class="modal fade" id="The_Enchanted_Bellows_And_Other_Stories">
+            <div class="modal-dialog">
+                <div class="modal-content" style="margin-top: 100px;">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title" style="margin-top: 10px;text-align: center">The Enchanted Bellows And Other Stories</h4>
+                    </div>
+                    <div class="modal-body" style="text-align: center;">
+                        <img class="img-responsive" src="https://rukminim1.flixcart.com/image/416/416/ki96c280-0/book/9/m/1/the-enchanted-bellows-original-imafy34m52ddakb2.jpeg?q=70" style="display: inline-block">
+                        <p style="margin-top: 10px;"></p>
+                        <b>Can Be Purchased On</b>
+                        <a href="https://www.flipkart.com/the-enchanted-bellows/p/itmf4y5gtdkjumnc?pid=9780753730522&lid=LSTBOK9780753730522OSRAL8&marketplace=FLIPKART&q=The+enchanted+bellows&store=bks&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=04218c7e-b531-45e2-a50f-81ceb09d0d9d.9780753730522.SEARCH&ppt=sp&ppn=sp&ssid=cremmji8e80000001617796912852&qH=622b8009ff479369"><b>Flipkart</b>
+                        </a>
+                        <b>or</b>
+                        <a href="https://www.amazon.in/Enchanted-Bellows-Enid-Blyton-Reads/dp/0753730529/ref=sr_1_2?dchild=1&keywords=The+enchanted+bellows&qid=1617797256&sr=8-2"><b>Amazon</b>
+                        </a>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    </div>
                 </div>
             </div>
         </div>
+
+
+
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6" data-toggle="modal" data-target="#Chimney_Corner_Stories">
+            <img class="img-responsive" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1211084948l/1338459.jpg" style="height:400px; width: 550px;">
+            <hr>
+            <p class="text-primary">Chimney Corner Stories</p>
+        </div>
+        <div class="modal fade" id="Chimney_Corner_Stories">
+            <div class="modal-dialog">
+                <div class="modal-content" style="margin-top: 100px;">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title" style="margin-top: 10px;text-align: center">Chimney Corner Stories</h4>
+                    </div>
+                    <div class="modal-body" style="text-align: center;">
+                        <img class="img-responsive" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1211084948l/1338459.jpg" style="display: inline-block">
+                        <p style="margin-top: 10px;"></p>
+                        <b>Can Be Purchased On</b>
+                        <a href="https://www.flipkart.com/chimney-corner-stories/p/itmfbtbrkgd3hzjw?pid=9780603032561&lid=LSTBOK9780603032561Y7JDDA&marketplace=FLIPKART&q=Chimney_Corner_Stories&store=search.flipkart.com&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=3e59eda5-d5e7-420b-aa8b-b6ed5092ada0.9780603032561.SEARCH&ppt=hp&ppn=homepage&ssid=ehk1g6dpps0000001617803756996&qH=454d33074e1b7715"><b>Flipkart</b>
+                        </a>
+                        <b>or</b>
+                        <a href="https://www.amazon.in/Chimney-Corner-Stories-Rewards-Blyton/dp/0603032567/ref=sr_1_1?crid=31HC5VREHVS5O&dchild=1&keywords=chimney+corner+stories+enid+blyton&qid=1617804567&sprefix=chimney+corner%2Caps%2C289&sr=8-1"><b>Amazon</b>
+                        </a>
+                        &nbsp;&nbsp;
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="myself">
+            <h2 class="text-capitalize">about me</h2>
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h2 class=" text-left"></h2>Hello,my name is Kaizhan Doctor and I live in Mumbai, My hobby is coding and reading.I study at St. Mary's school I.C.S.E. and I am in 2nd standard,The platform where I learn coding is called WhiteHat Jr I have had a lot of fun while coding, I have made plenty of games, apps, websites and this is also one of them. Hope you like it Below is where you can catch up with me.<br>
+            <center>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241316.64332144568!2d72.74109713631994!3d19.08252232482484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c6306644edc1%3A0x5da4ed8f8d648c69!2sMumbai%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1617804712296!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <br><br>
+                <a href="#"><i class="fa fa-whatsapp fa-5x" aria-hidden="true" style="color: green;"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="#"><i class="fa fa-facebook fa-5x" aria-hidden="true" style="color:darkblue;"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="#"><i class="fa fa-telegram fa-5x" aria-hidden="true" style="color: dodgerblue;"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            </center>
+        </div>
+
     </div>
 </body>
 
